[package]
name = "raidres-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
anyhow = "1.0.86"
base64 = "0.22.1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }